# Sword-and-Magic

./: .gitignore  README.md
BattlefieldH3/: BattlefieldH3.sln  CMakeLists.txt
BattlefieldH3/BattlefieldH3/: AnimationComponent.cpp  AnimationComponent.h  Animator.cpp  Animator.h  BattleHandler.cpp  BattleHandler.h  BattlePathFinder.cpp  BattlePathFinder.h  BattleUnit.cpp  BattleUnit.h  Battlefield.cpp  Battlefield.h  BattlefieldH3.aps  BattlefieldH3.cpp  BattlefieldH3.vcxproj  BattlefieldH3.vcxproj.filters  Battlefiled.cpp  Battlefiled.h  Button.cpp  Button.h  Configuration.cpp  Configuration.h  CreatureInfo.cpp  CreatureInfo.h  Game.cpp  Game.h  GameConstants.h  Garrnison.cpp  Garrnison.h  Graphics.cpp  Graphics.h  Graphics2.cpp  Graphics2.h  GuiHandler.cpp  GuiHandler.h  InterfaceElem.cpp  InterfaceElem.h  Monser.cpp  Monser.h  PCH.hpp  (+12 more)
BattlefieldH3/BattlefieldH3/x64/Release/: BattlefieldH3.exe.recipe  BattlefieldH3.ipdb
BattlefieldH3/BattlefieldH3/x64/Release/BattlefieldH3.tlog/: BattlefieldH3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
BattlefieldH3/res/: config.txt  startMap.txt
BattlefieldH3/res/Levels/: Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Level6.txt  Level8.txt  Level9.txt
BattlefieldH3/src/: AnimationComponent.cpp  AnimationComponent.h  Animator.cpp  Animator.h  BattleHandler.cpp  BattleHandler.h  BattlePathFinder.cpp  BattlePathFinder.h  BattleUnit.cpp  BattleUnit.h  BattlefieldH3.cpp  Battlefiled.cpp  Battlefiled.h  Button.cpp  Button.h  Configuration.cpp  Configuration.h  CreatureInfo.cpp  CreatureInfo.h  Game.cpp  Game.h  GameConstants.h  Garrnison.cpp  Garrnison.h  Graphics.h  Graphics2.cpp  Graphics2.h  GuiHandler.cpp  GuiHandler.h  Monser.cpp  Monser.h  Player.cpp  Player.h  SelectionWindow.cpp  SelectionWindow.h  Spell.cpp  Spell.h  SpellBook.cpp  SpellBook.h  WindowObject.cpp  (+1 more)
BattlefieldH3/x64/Release/: startMap.txt
OpenArena/: CMakeLists.txt
OpenArena/SFML-2.5.1/: CMakeLists.txt
OpenArena/SFML-2.5.1/examples/: CMakeLists.txt
OpenArena/SFML-2.5.1/examples/battle/res/: startMap.txt
OpenArena/SFML-2.5.1/examples/battle/src/: BattleHandler.cpp  BattleHandler.h  BattleUnit.cpp  Battlefiled.h  CMakeLists.txt  GameConstants.cpp  Garrnison.cpp  GuiHandler.h  MainMenu.h  Monser.cpp  Monser.h  PCH.hpp  SelectionWindow.h  SpellBook.cpp  WindowObject.cpp  WindowObject.h  resource.h
OpenArena/res/: startMap.txt
OpenArena/res/Levels/: Level3.txt  Level4.txt  Level7.txt
OpenArena/src/: AnimationInitializer.h  Animator.h  BattleHandler.cpp  BattleHandler.h  BattlePathFinder.cpp  BattlePathFinder.h  BattleUnit.cpp  Battlefiled.cpp  Battlefiled.h  Button.cpp  Button.h  CreatureInfo.h  Game.cpp  GameConstants.cpp  Garrnison.cpp  Garrnison.h  Graphics.cpp  Graphics2.cpp  Graphics2.h  InterfaceElem.cpp  InterfaceElem.h  Monster.cpp  SelectionWindow.cpp  SelectionWindow.h  Spell.cpp  SpellBook.h
Projekt1/: AnimotionComponent.cpp  AnimotionComponent.h  BattleHandler.cpp  BattleHandler.h  BattleUnit.cpp  BattleUnit.h  Battlefield.cpp  Battlefield.h  BorderWindow.cpp  BorderWindow.h  Button.cpp  Button.h  ButtonsArea.cpp  ButtonsArea.h  ControlPanel.cpp  ControlPanel.h  Direction.cpp  Direction.h  EditorState.cpp  EditorState.h  Fraction.cpp  Fraction.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  GameState.cpp  GameState.h  GarrnisonInterface.cpp  GarrnisonInterface.h  Graphics.cpp  Graphics.h  GuiHandler.cpp  GuiHandler.h  HeroInstance.cpp  HeroInstance.h  HeroWindow.cpp  HeroWindow.h  InfoWindows.cpp  InfoWindows.h  (+39 more)
Projekt1/Debug/: Projekt1.pch  vc141.idb
Projekt1/Debug/Projekt1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projekt1.lastbuildstate
Projekt1/Textures/: PC Computer - Heroes of Might and Magic 3 - Mouse Cursors.xcf
Projekt1/x64/Debug/: game.new.obj.enc  interface_gamearea.new.obj.enc  mapobject.new.obj.enc  vc141.idb  world.new.obj.enc
Projekt1/x64/Debug/Projekt1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projekt1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projekt1/x64/Release/Projekt1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projekt1.lastbuildstate  Projekt1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
